--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
   "homepage": "https://github.com/tarosky/shouyaku#readme",
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-react-jsx": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "eslint": "^5.6.1",
     "eslint-config-wordpress": "^2.0.0",
+    "eslint-plugin-react": "^7.12.3",
     "event-stream": "^4.0.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^6.0.0",
